--- a/codedaddies_list/templates/base.html
+++ b/codedaddies_list/templates/base.html
@@ -11,6 +11,14 @@
 	<title>Codedaddies list</title>
 </head>
 <body>
+<nav>
+    <div class="container nav-wrapper">
+      <a href="/" class="brand-logo">Codedaddies List</a>
+      <ul id="nav-mobile" class="right">
+        <li><a href="/">Home</a></li>
+      </ul>
+    </div>
+ </nav>
 	<h2>Testing to see if this works.</h2>
 	
 </body>
