added another icon

--- a/codedaddies_list/templates/base.html
+++ b/codedaddies_list/templates/base.html
@@ -28,6 +28,20 @@
 				<p class="light center">Scrape away right here with a beautiful GUI</p>
 			</div>
 		</div>
+		<div class="col s4">
+			<div class="center">
+				<i class="large material-icons" style="color: orange">camera</i>
+				<p>Filter your searches</p>
+				<p class="light center">In-built fuctionality to filter based on pricing</p>
+			</div>
+		</div>
+		<div class="col s4">
+			<div class="center">
+				<i class="large material-icons" style="color: blue">chrome_reader_mode</i>
+				<p>A much beautiful front-end to Craiglist</p>
+				<p class="light center">Built with ❤️ by @omgitsfaraaz</p>
+			</div>
+		</div>
 	</div>
 	
 </body>
