--- a/codedaddies_list/templates/base.html
+++ b/codedaddies_list/templates/base.html
@@ -19,30 +19,41 @@
 	      </ul>
 	    </div>
 	</nav>
-	<h1 style="text-align: center;">What do you want to search on Codedaddies List?</h1>
-	<div class="row">
-		<div class="col s4">
-			<div class="center">
-				<i class="large material-icons" style="color: #EE6E73">flash_on</i>
-				<p>Fast craiglist web scraper</p>
-				<p class="light center">Scrape away right here with a beautiful GUI</p>
+	<div class="container">
+		<h1 style="text-align: center;">What do you want to search on Codedaddies List?</h1>
+		<div class="row">
+			<div class="col s4">
+				<div class="center">
+					<i class="large material-icons" style="color: #EE6E73">flash_on</i>
+					<p>Fast craiglist web scraper</p>
+					<p class="light center">Scrape away right here with a beautiful GUI</p>
+				</div>
 			</div>
-		</div>
-		<div class="col s4">
-			<div class="center">
-				<i class="large material-icons" style="color: orange">camera</i>
-				<p>Filter your searches</p>
-				<p class="light center">In-built fuctionality to filter based on pricing</p>
+
+			<div class="col s4">
+				<div class="center">
+					<i class="large material-icons" style="color: orange">camera</i>
+					<p>Filter your searches</p>
+					<p class="light center">In-built fuctionality to filter based on pricing</p>
+				</div>
 			</div>
-		</div>
-		<div class="col s4">
-			<div class="center">
-				<i class="large material-icons" style="color: blue">chrome_reader_mode</i>
-				<p>A much beautiful front-end to Craiglist</p>
-				<p class="light center">Built with ❤️ by @omgitsfaraaz</p>
+
+			<div class="col s4">
+				<div class="center">
+					<i class="large material-icons" style="color: blue">chrome_reader_mode</i>
+					<p>A much beautiful front-end to Craiglist</p>
+					<p class="light center">Built with ❤️ by @omgitsfaraaz</p>
+				</div>
 			</div>
 		</div>
 	</div>
+
+{% block content %}
+
+{% endblock content %}
 	
+
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>	
 </body>
 </html>
