--- a/codedaddies_list/templates/my_app/new_search.html
+++ b/codedaddies_list/templates/my_app/new_search.html
@@ -6,7 +6,9 @@
 	<form action="{% url 'new_search' %}" method="post">
 		{% csrf_token %}
 		<input type="text" name="search" placeholder="search">
-		<input type="submit" name="submit">
+		<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+			<i class="material-icons right">send</i>
+		 </button>
 	</form>
 
 {% endblock content %}
