--- a/codedaddies_list/templates/base.html
+++ b/codedaddies_list/templates/base.html
@@ -46,6 +46,13 @@
 				</div>
 			</div>
 		</div>
+		<form action="{% url 'new_search' %}" method="post">
+			{% csrf_token %}
+			<input type="text" name="search" placeholder="search">
+			<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+				<i class="material-icons right">send</i>
+			 </button>
+		</form>
 		{% block content %}
 
 		{% endblock content %}
