--- a/codedaddies_list/templates/my_app/new_search.html
+++ b/codedaddies_list/templates/my_app/new_search.html
@@ -3,12 +3,6 @@
 {% block content %}
 
 	
-	<form action="{% url 'new_search' %}" method="post">
-		{% csrf_token %}
-		<input type="text" name="search" placeholder="search">
-		<button class="btn waves-effect waves-light" type="submit" name="action">Submit
-			<i class="material-icons right">send</i>
-		 </button>
-	</form>
+	<h2>{{ search }}</h2>
 
 {% endblock content %}
