--- a/codedaddies_list/templates/my_app/new_search.html
+++ b/codedaddies_list/templates/my_app/new_search.html
@@ -3,6 +3,54 @@
 {% block content %}
 
 	
-	<h2>{{ search }}</h2>
+	<h2 style="text-align: center;">{{ search | title }}</h2>
+	<div class="row">
+	    <div class="col s4">
+	      <div class="card">
+	        <div class="card-image">
+	          <img src="https://www.springintheair.com/wp-content/uploads/bfi_thumb/red-roses-50-set-compressor-n5oucgj8yzgm0fcs1j2el4wxysgxatrjyhwsk99vtk.jpg">
+	          <span class="card-title">Card Title</span>
+	        </div>
+	        <div class="card-content">
+	          <p>I am a very simple card. I am good at containing small bits of information.
+	          I am convenient because I require little markup to use effectively.</p>
+	        </div>
+	        <div class="card-action">
+	          <a href="/">This is a link</a>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="col s4">
+	      <div class="card">
+	        <div class="card-image">
+	          <img src="https://www.springintheair.com/wp-content/uploads/bfi_thumb/red-roses-50-set-compressor-n5oucgj8yzgm0fcs1j2el4wxysgxatrjyhwsk99vtk.jpg">
+	          <span class="card-title">Card Title</span>
+	        </div>
+	        <div class="card-content">
+	          <p>I am a very simple card. I am good at containing small bits of information.
+	          I am convenient because I require little markup to use effectively.</p>
+	        </div>
+	        <div class="card-action">
+	          <a href="/">This is a link</a>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="col s4">
+	      <div class="card">
+	        <div class="card-image">
+	          <img src="https://www.springintheair.com/wp-content/uploads/bfi_thumb/red-roses-50-set-compressor-n5oucgj8yzgm0fcs1j2el4wxysgxatrjyhwsk99vtk.jpg">
+	          <span class="card-title">Card Title</span>
+	        </div>
+	        <div class="card-content">
+	          <p>I am a very simple card. I am good at containing small bits of information.
+	          I am convenient because I require little markup to use effectively.</p>
+	        </div>
+	        <div class="card-action">
+	          <a href="/">This is a link</a>
+	        </div>
+	      </div>
+	    </div>
+  </div>
+
 
 {% endblock content %}
