--- a/codedaddies_list/templates/base.html
+++ b/codedaddies_list/templates/base.html
@@ -8,19 +8,19 @@
 	<link rel="stylesheet" href="{% static "css/style.css" %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<title>Codedaddies list</title>
+	<title>SearchKaro!</title>
 </head>
 <body>
 	<nav>
 	    <div class="container nav-wrapper">
-	      <a href="/" class="brand-logo">Codedaddies List</a>
+	      <a href="/" class="brand-logo">SearchKaro!</a>
 	      <ul id="nav-mobile" class="right">
 	        <li><a href="/">Home</a></li>
 	      </ul>
 	    </div>
 	</nav>
 	<div class="container">
-		<h1 style="text-align: center;">What do you want to search on Codedaddies List?</h1>
+		<h1 style="text-align: center;">What do you want to search on SearchKaro?</h1>
 		<div class="row">
 			<div class="col s4">
 				<div class="center">
