--- a/codedaddies_list/templates/base.html
+++ b/codedaddies_list/templates/base.html
@@ -20,7 +20,7 @@
 	    </div>
 	</nav>
 	<div class="container">
-		<h1 style="text-align: center;">What do you want to search on SearchKaro?</h1>
+		<h1 style="text-align: center;">What do you want to search for on SearchKaro?</h1>
 		<div class="row">
 			<div class="col s4">
 				<div class="center">
